# NativeLearn

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  empty.cpp  empty.h  native_activity_impl.cpp  native_add.h  native_add.s  native_gl.cpp  native_gl.h  native_learn.cpp
app/src/main/java/com/park/native_learn/: MainActivity.java  NativeBridge.java
app/src/main/java/com/park/native_learn/opengl/: GLNativeBridge.java  MyGLRenderer.java  MyGLView.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
